# project-euler-solutions-haskell

./: LICENSE  README.md  project-euler-solutions.cabal
bench/: SolutionsBench.hs
src/: Lib.hs
