name:                project-euler-solutions
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/project-euler-solutions#readme
license:             BSD3
license-file:        LICENSE
author:              Damian Nadales
maintainer:          damian.nadales@gmail.com
copyright:           2017 Damian Nadales
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable project-euler-solutions-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , project-euler-solutions
  default-language:    Haskell2010

test-suite project-euler-solutions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , project-euler-solutions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark project-euler-solutions-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             SolutionsBench.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , project-euler-solutions
                     , criterion
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N                     
  default-language:    Haskell2010

  
source-repository head
  type:     git
  location: https://github.com/githubuser/project-euler-solutions
